kubernetes-manifests/application/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-crud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-crud
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: users-crud
    spec:
      containers:
        - image: eliseevnp/users-crud:latest
          name: users-crud
          ports:
            - containerPort: 3000
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 3000
            periodSeconds: 40
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 3000
            periodSeconds: 40
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
