kubernetes-manifests/application/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: users-crud
spec:
  ports:
    - port: 8000
      targetPort: 3000
  selector:
    app: users-crud
  type: ClusterIP
